[package]
name = "war-sheep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy-inspector-egui = "0.12" 
bevy_simple_stat_bars = {git = "https://github.com/ickshonpe/bevy_simple_stat_bars", branch="main"}
iyes_loopless = "0.7"
rand = "0.8"

## Uncomment if game becomes too slow in debug mode ## 
#
# [profile.dev]
# opt-level = 1
# 
# [profile.dev.package."*"]
# opt-level = 3
